# bible-similarity

./: .flake8  .gitignore  README.md  ai_bibl_refs.json  cluster.py  find_bible_refs.py  find_passge_reuse.py  foo.csv  index_bible.py  index_passages.py  index_passages_default_embeddings.py  pyproject.toml  query.py  result.json  result_passage.json  sentence_splitter.py  sentences.json  similar_texts.csv
