[project]
name = "bible-similarity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "chromadb",
    "ipykernel>=6.29.5",
    "flake8>=7.2.0",
    "black>=25.1.0",
    "tqdm>=4.67.1",
    "requests>=2.32.3",
    "spacy>=3.8.5",
    "pip>=25.0.1",
    "csae-pyutils>=0.2",
]
